# jax-lightning-template

./: .gitignore  README.md  pyproject.toml
cfg/: train.yaml
src/jax_lightning_template/: __init__.py  __main__.py  module.py
src/jax_lightning_template/criterion/: ce_loss.py  l2_loss.py  multi_criterion.py
src/jax_lightning_template/dataset/: base_eqx_dataset.py  datamodule.py  fashion_mnist.py
src/jax_lightning_template/model/: resnet.py
tests/functional_tests/: test_functional_example.py
