[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-lightning-template"
dynamic = ["version"]
description = "A sample Pytorch Lightning project"
readme = "README.md"

requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy<2.0.0',
    'pytorch-lightning~=2.3.0',
    'jax~=0.4.0',
    'jaxlib~=0.4.0',
    'optax~=0.2.0',
    'torch~=2.3.0',
    'wandb~=0.17.0',
    'equinox~=0.11.0',
]
[project.optional-dependencies]
test = ['pytest']
analyze = ['pyright', 'pylint', 'bandit', 'black', 'isort']
build = ['setuptools', 'wheel', 'build']
publish = ['twine']
all = ["jax-lightning-template[test,analyze,build,publish]"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jax_lightning_template = ["py.typed"]